Check point work attempting to have the Swiftly applet mostly unsigned with signed code loaded on demand [when the user will be asked for permissions]. All the non-GUI bits of this work pretty well, but the JFileChooser when using a non-Sun L&F chokes badly. I've spent some time trying to work around this but for now we'll just sign both the applet jars and everything should work as before.